--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       <div class="col-md-6 order-2 order-md-1 text-center text-md-start">
         <div class="text">
           <span class="subheading" style="font-weight: 400; font-family: 'Montserrat', sans-serif;">Halo!</span>
-          <h1 class="mb-4 mt-3" style="font-weight: 700; font-family: 'Montserrat', sans-serif;">Saya <span style="color: orange;">Charles Iqbal Rizanta</span></h1>
-          <h2 class="mb-4" style="font-weight: 500; font-family: 'Montserrat', sans-serif;">Pengembang Web Lepas</h2>
+          <h1 class="mb-4 mt-3" style="font-weight: 700; font-family: 'Montserrat', sans-serif;">I'm <span style="color: orange;">Charles Iqbal Rizanta</span></h1>
+          <h2 class="mb-4" style="font-weight: 500; font-family: 'Montserrat', sans-serif;">a Freelance Web Developer</h2>
           <p>
-            <a href="https://api.whatsapp.com/send?phone=6282139077587" class="btn btn-primary py-3 px-4">Pekerjakan saya</a>
-            <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">Karya saya</a>
+            <a href="https://api.whatsapp.com/send?phone=6282245842190" class="btn btn-primary py-3 px-4">Hire Me</a>
+            <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My Projects</a>
           </p>
         </div>
       </div>
@@ -99,7 +99,7 @@
       }
 
       .hero {
-        padding-bottom: 100px; /* Tambahkan lebih banyak padding bawah pada perangkat kecil */
+        padding-bottom: 50px; /* Tambahkan lebih banyak padding bawah pada perangkat kecil */
       }
     }
 
@@ -116,7 +116,7 @@
       <div class="col-md-6 col-lg-5 d-flex">
         <div class="img-about img d-flex align-items-stretch" style="position: relative;">
           <div class="overlay" style="position: absolute; inset: 0; background: rgba(0,0,0,0.2);"></div>
-          <div class="img d-flex align-self-stretch align-items-center" style="background-image: url('images/charles2.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
+          <div class="img d-flex align-self-stretch align-items-center" style="background-image: url('images/charles.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
               <li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
               <li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
               <li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
-              <li class="d-flex"><span>Phone:</span> <span>082139077587</span></li>
+              <li class="d-flex"><span>Phone:</span> <span>082245842190</span></li>
             </ul>
           </div>
         </div>
@@ -465,96 +465,132 @@
 	</section>
 
 	<section class="ftco-section ftco-project" id="projects-section">
-		<div class="container">
-			<div class="row justify-content-center pb-5">
-				<div class="col-md-12 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Projects</h1>
-					<h2 class="mb-4">Our Projects</h2>
-					<p>Below are the projects we have completed, you can consider your project needs with us</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/admin.jpg);"
-						onclick="window.location.href='https://desakarangnongko.000webhostapp.com/administrator/login.php';">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="https://desakarangnongko.000webhostapp.com/administrator/login.php">DASHBOARD
-									ADMIN</a></h3>
-							<span>Web Developer</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/webdesa.jpg);"
-						onclick="window.location.href='https://desakarangnongko.000webhostapp.com/'">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="https://desakarangnongko.000webhostapp.com/">SISTEM INFORMASI DESA</a></h3>
-							<span>Web Developer</span>
-						</div>
-					</div>
-				</div>
-			</div>
+  <div class="container">
+    <!-- Heading Section -->
+    <div class="row justify-content-center pb-5">
+      <div class="col-md-12 heading-section text-center">
+        <h1 class="big big-2">Projects</h1>
+        <h2 class="mb-4">Our Projects</h2>
+        <p>Below are the projects we have completed. You can consider your project needs with us.</p>
+      </div>
+    </div>
 
-			<div class="row">
-				<div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/tekno.jpg);"
-						onclick="window.location.href='https://teknowiz.my.id/'">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="https://teknowiz.my.id/">BLOG & SHOP</a></h3>
-							<span>WordPress</span>
-						</div>
-					</div>
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/fox.jpg);"
-						onclick="window.location.href='https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing';">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a
-									href="https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing">3D
-									CHARACTER DESIGN</a></h3>
-							<span>3D DESIGN</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/rumah.jpg);"
-								onclick="window.location.href='https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing';">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3><a
-											href="https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing">MODELING
-											BUILDING</a></h3>
-									<span>3D DESIGN</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/picgamingroom.png);"
-								onclick="window.location.href='https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing';">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3><a
-											href="https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing">PC
-											GAMING ROOM DESIGN</a></h3>
-									<span>3D DESIGN</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    <!-- Projects Row 1 -->
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="project img d-flex justify-content-center align-items-center"
+          style="background-image: url('images/admin.jpg');"
+          onclick="window.location.href='https://desakarangnongko.000webhostapp.com/administrator/login.php';">
+          <div class="overlay"></div>
+          <div class="text text-center p-4">
+            <h3><a href="https://desakarangnongko.000webhostapp.com/administrator/login.php">DASHBOARD ADMIN</a></h3>
+            <span>Web Developer</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8 mb-4">
+        <div class="project img d-flex justify-content-center align-items-center"
+          style="background-image: url('images/webdesa.jpg');"
+          onclick="window.location.href='https://desakarangnongko.000webhostapp.com/';">
+          <div class="overlay"></div>
+          <div class="text text-center p-4">
+            <h3><a href="https://desakarangnongko.000webhostapp.com/">SISTEM INFORMASI DESA</a></h3>
+            <span>Web Developer</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Projects Row 2 -->
+    <div class="row">
+      <div class="col-md-8 mb-4">
+        <div class="project img d-flex justify-content-center align-items-center"
+          style="background-image: url('images/tekno.jpg');"
+          onclick="window.location.href='https://teknowiz.my.id/';">
+          <div class="overlay"></div>
+          <div class="text text-center p-4">
+            <h3><a href="https://teknowiz.my.id/">BLOG & SHOP</a></h3>
+            <span>WordPress</span>
+          </div>
+        </div>
+        <div class="project img d-flex justify-content-center align-items-center mt-4"
+          style="background-image: url('images/fox.jpg');"
+          onclick="window.location.href='https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing';">
+          <div class="overlay"></div>
+          <div class="text text-center p-4">
+            <h3><a
+                href="https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing">3D CHARACTER DESIGN</a></h3>
+            <span>3D DESIGN</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="project img d-flex justify-content-center align-items-center mb-4"
+          style="background-image: url('images/rumah.jpg');"
+          onclick="window.location.href='https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing';">
+          <div class="overlay"></div>
+          <div class="text text-center p-4">
+            <h3><a
+                href="https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing">MODELING BUILDING</a></h3>
+            <span>3D DESIGN</span>
+          </div>
+        </div>
+        <div class="project img d-flex justify-content-center align-items-center"
+          style="background-image: url('images/picgamingroom.png');"
+          onclick="window.location.href='https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing';">
+          <div class="overlay"></div>
+          <div class="text text-center p-4">
+            <h3><a
+                href="https://drive.google.com/drive/folders/1FK9JnguHBrkU1fOpyEvQZZUjOAi4i9Pt?usp=sharing">PC GAMING ROOM DESIGN</a></h3>
+            <span>3D DESIGN</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <style>
+    .ftco-project .project {
+      position: relative;
+      background-size: cover;
+      background-position: center;
+      height: 300px;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .ftco-project .project:hover {
+      transform: scale(1.05);
+    }
+
+    .ftco-project .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+    }
+
+    .ftco-project .project:hover .overlay {
+      opacity: 1;
+    }
+
+    .ftco-project .text {
+      position: relative;
+      z-index: 2;
+      color: #fff;
+    }
+
+    .ftco-project h3 a {
+      color: #fff;
+      text-decoration: none;
+    }
+  </style>
+</section>
 
 	<section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
 		<div class="container">
@@ -590,11 +626,11 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<a href="https://api.whatsapp.com/send?phone=6282139077587"><span
+							<a href="https://api.whatsapp.com/send?phone=6282245842190"><span
 									class="icon-whatsapp"></span></a>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="https://api.whatsapp.com/send?phone=6282139077587">082139077587</a></p>
+						<p><a href="https://api.whatsapp.com/send?phone=6282245842190">082245842190</a></p>
 					</div>
 				</div>
 
@@ -661,7 +697,7 @@
 							<li class="ftco-animate"><a
 									href="https://www.linkedin.com/in/charles-iqbal-rizanta-ab0814327/"><span
 										class="icon-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="https://api.whatsapp.com/send?phone=6282139077587"><span
+							<li class="ftco-animate"><a href="https://api.whatsapp.com/send?phone=6282245842190"><span
 										class="icon-whatsapp"></span></a></li>
 							<li class="ftco-animate"><a
 									href="https://www.instagram.com/charlesiqball/"><span
@@ -713,9 +749,9 @@
 								<li><span class="icon icon-map-marker"></span><span class="text">Malang, Jawa Timur,
 										Indonesia</span></li>
 								<li>
-									<a href="https://api.whatsapp.com/send?phone=6282139077587">
+									<a href="https://api.whatsapp.com/send?phone=6282245842190">
 										<span class="icon icon-whatsapp"></span>
-										<span class="text">082139077587</span>
+										<span class="text">08245842190</span>
 									</a>
 								</li>
 
